objects/SBQQ__ProductAction__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProductActionHelp</customHelpPage>
    <description>Action taken when Product Rule fires.</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SBQQ__FilterField__c</fullName>
        <description>The field that is updated when the rule is triggered.</description>
        <inlineHelpText>Choose the field to update when the rule is triggered.</inlineHelpText>
        <label>Filter Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>L2O_Product_Readiness_Stage__c</fullName>
                    <label>Product Readiness Stage</label>
                </value>
                <value>
                    <fullName>L2O_Business_Region_Formula__c</fullName>
                    <label>Product Business Region Formula</label>
                </value>
                <value>
                    <fullName>L2O_Sales_Type__c</fullName>
                </value>
                <value>
                    <fullName>L2O_Configured_SKU_Product_Code__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <description>The value that will be updated in the chosen Filter Field.</description>
        <inlineHelpText>Enter the value to be updated in the chosen Filter Field.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator that determines how the Filter Field will be applied to the Filter Value.</description>
        <inlineHelpText>Choose the operator that determines how the Filter Field will apply to the Filter Value.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ParentRuleIsActive__c</fullName>
        <formula>SBQQ__Rule__r.SBQQ__Active__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentRuleIsActive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The product that is automatically selected on the quote.</description>
        <inlineHelpText>Choose the product to be automatically selected on the quote. Note: The product rule Type must be set to &quot;Selection&quot;.</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Actions</relationshipLabel>
        <relationshipName>ProductActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines whether the product in the Product Lookup field will be selected on the quote.</description>
        <inlineHelpText>Select if you want the product in the Product Lookup field to be selected on the quote.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Rule that runs this product action.</description>
        <inlineHelpText>Rule that runs this product action.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Actions</relationshipLabel>
        <relationshipName>Actions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <description>Type of action.</description>
        <inlineHelpText>Specify the type of action.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
                <value>
                    <fullName>Enable</fullName>
                </value>
                <value>
                    <fullName>Disable</fullName>
                </value>
                <value>
                    <fullName>Enable &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Disable &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Show</fullName>
                </value>
                <value>
                    <fullName>Hide</fullName>
                </value>
                <value>
                    <fullName>Show &amp; Add</fullName>
                </value>
                <value>
                    <fullName>Hide &amp; Remove</fullName>
                </value>
                <value>
                    <fullName>Default Filter</fullName>
                </value>
                <value>
                    <fullName>Optional Filter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ValueAttribute__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to identify the specific attribute if the Value Field is a global Configuration Attribute field.</description>
        <inlineHelpText>Used to identify the specific attribute if the Value Field is a global Configuration Attribute field.</inlineHelpText>
        <label>Value Attribute</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.SBQQ__ValueField__c</field>
                <operation>equals</operation>
                <valueField>SBQQ__ProductAttribute__c.SBQQ__Attribute__r.SBQQ__TargetField__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__ProductAttribute__c</referenceTo>
        <relationshipLabel>Product Actions</relationshipLabel>
        <relationshipName>ProductActions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ValueField__c</fullName>
        <description>This field will be used instead of the Filter Value when compared with the Filter Field.</description>
        <inlineHelpText>Compares the Filter Field with this field instead of the Filter Value.</inlineHelpText>
        <label>Value Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Code</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ValueObject__c</fullName>
        <description>The Salesforce Object that holds the Value Field,</description>
        <inlineHelpText>Select the Salesforce Object where the Value Field is defined.</inlineHelpText>
        <label>Value Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
                <value>
                    <fullName>Configuration Attributes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Action</label>
    <nameField>
        <displayFormat>PA-{0000000}</displayFormat>
        <label>Product Action #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Value_attr_required_if_global_field</fullName>
        <active>true</active>
        <description>Value Attribute required since the Value Field is a global Configuration Attribute field.</description>
        <errorConditionFormula>IF(TEXT(SBQQ__ValueObject__c) == &apos;Configuration Attributes&apos; &amp;&amp; CONTAINS(TEXT(SBQQ__ValueField__c), &apos;.&apos;) &amp;&amp; SBQQ__ValueAttribute__c == &apos;&apos;, true, false)</errorConditionFormula>
        <errorMessage>Value Attribute required since the Value Field is a global Configuration Attribute field.</errorMessage>
    </validationRules>
</CustomObject>